--- a/DestoPesto/DestoPesto/Views/ContestIntroPage.xaml
+++ b/DestoPesto/DestoPesto/Views/ContestIntroPage.xaml
@@ -19,7 +19,7 @@
                                   ScaleOut="0.8" />
     </pages:PopupPage.Animation>
 
-    <Frame Margin="10" 
+    <Frame Margin="5" 
           CornerRadius="5"
           HorizontalOptions="Fill" 
           VerticalOptions="Center"
@@ -27,7 +27,7 @@
           MinimumHeightRequest="500"
           IsClippedToBounds="True"
           BackgroundColor="White"
-          Padding="10,20,10,10">
+          Padding="5">
 
         <Grid>
             <Grid.RowDefinitions>
@@ -41,25 +41,26 @@
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-                <Frame  HeightRequest="20" HorizontalOptions="Center" VerticalOptions="Center" HasShadow="False" BackgroundColor="#0D6EFD" Padding="5" CornerRadius="10" >
-                    <Image  HorizontalOptions="Center" InputTransparent="True" Source="{extensions:ImageResource DestoPesto.Images.icon.png}" VerticalOptions="Center" Aspect="AspectFit" />
+                <Frame  HeightRequest="40" HorizontalOptions="Center" VerticalOptions="Center" HasShadow="False" BackgroundColor="#0D6EFD" Padding="5" CornerRadius="5" >
+                    <Image  HorizontalOptions="Center" InputTransparent="True" Source="{extensions:ImageResource DestoPesto.Images.destopesto_icon.png}" VerticalOptions="Center" Aspect="AspectFit" />
                 </Frame>
                 <Label Grid.Column="1" Text="{x:Static resources:Properties.Resources.ContestTitle}" FontSize="Title" VerticalOptions="CenterAndExpand" HorizontalOptions="StartAndExpand" BackgroundColor="White"   TextColor="#0D6EFD"/>
             </Grid>
             <!--BackgroundColor="{extensions:AppMode Color=Mitsos}"-->
 
-            <Grid Grid.Row="1"  HorizontalOptions="FillAndExpand"  HeightRequest="250" >
+            <Grid Grid.Row="1"  HorizontalOptions="FillAndExpand"  >
                 <Image   x:Name="backgroundImage" Source="{Binding InfoUrl}" AbsoluteLayout.LayoutFlags="PositionProportional"  HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" Aspect="AspectFill"/>
             </Grid>
             <Grid Grid.Row="2"  BackgroundColor="White"   >
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="2*"/>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
                 <Label Text="{x:Static resources:Properties.Resources.EnterCompetition}" TextColor="#0D6EFD" VerticalTextAlignment="Center" HorizontalTextAlignment="Start" FontSize="Medium"/>
-                <Button  Grid.Column="1" BackgroundColor="#5EDD60" x:Name="OKBtn" Margin="5"  CornerRadius="6" Text="{x:Static resources:Properties.Resources.YesText}" Clicked="OKBtn_Clicked"   ></Button>
-                <Button  Grid.Column="2" BackgroundColor="#CF1F25" x:Name="CancelBtn" Margin="5" CornerRadius="6"  Text="{x:Static resources:Properties.Resources.NoText}" Clicked="CancelBtn_Clicked" ></Button>
+                <Button  Grid.Column="1" BackgroundColor="#CF1F25" x:Name="CancelBtn" Margin="5" CornerRadius="6"  Text="{x:Static resources:Properties.Resources.NoText}" Clicked="CancelBtn_Clicked" ></Button>
+                <Button  Grid.Column="2" BackgroundColor="#5EDD60" x:Name="OKBtn" Margin="5"  CornerRadius="6" Text="{x:Static resources:Properties.Resources.YesText}" Clicked="OKBtn_Clicked"   ></Button>
+                
             </Grid>
             
                 <hpl:HyperlinkLabel     x:Name="ContestTerms" Text="{x:Static resources:Properties.Resources.ContestTermsLabel}" Clicked="ContestTerms_Clicked" Grid.Row="3" FontSize="Micro"/>
