--- a/DestoPesto/DestoPesto/AppShell.xaml
+++ b/DestoPesto/DestoPesto/AppShell.xaml
@@ -11,9 +11,9 @@
        
        x:Class="DestoPesto.AppShell">
 
-    <Shell.FlyoutHeaderTemplate>
+    <!--<Shell.FlyoutHeaderTemplate>
         <DataTemplate>
-            <!--<Grid BackgroundColor="White" >
+            --><!--<Grid BackgroundColor="White" >
                 <Grid.RowDefinitions>
                     <RowDefinition Height="2*"/>
                     <RowDefinition Height="*"/>
@@ -21,10 +21,10 @@
                 
                 
 
-            </Grid>-->
+            </Grid>--><!--
             <Image HeightRequest="50"  HorizontalOptions="Start" Source="{extensions:ImageResource DestoPesto.Images.destopesto_logo_square_blue.png}" BackgroundColor="#0D6EFD"/>
         </DataTemplate>
-    </Shell.FlyoutHeaderTemplate>
+    </Shell.FlyoutHeaderTemplate>-->
 
 
 
@@ -45,28 +45,31 @@
                         <ColumnDefinition Width="2*"/>
                     </Grid.ColumnDefinitions>
 
-                    <hpl:HyperlinkLabel x:Name="howto" Grid.ColumnSpan="2" Text="{x:Static resources:Properties.Resources.HowItWorks}" Clicked="howto_Clicked" />
+                    <!--<hpl:HyperlinkLabel x:Name="howto" Grid.ColumnSpan="2" Text="{x:Static resources:Properties.Resources.HowItWorks}" Clicked="howto_Clicked" />
                     <hpl:HyperlinkLabel Grid.Row="1" x:Name="vision" Grid.ColumnSpan="2" Text="{x:Static resources:Properties.Resources.Vision}" Clicked="vision_Clicked" />
                     <hpl:HyperlinkLabel Grid.Row="2"  x:Name="disclaimer" Grid.ColumnSpan="2" Text="{x:Static resources:Properties.Resources.TermsConditions}" Clicked="disclaimer_Clicked" />
                     <hpl:HyperlinkLabel Grid.Row="3" x:Name="PrivacyPolicy" Grid.ColumnSpan="2" Text="{x:Static resources:Properties.Resources.PrivacyPolicy}" Clicked="PrivacyPolicy_Clicked" />
+                    <hpl:HyperlinkLabel Grid.Row="4" x:Name="CookiesPolicy" Grid.ColumnSpan="2" Text="{x:Static resources:Properties.Resources.CookiesPolicy}" Clicked="CookiesPolicy_Clicked" />-->
+                    
+                    
+                    <!--<hpl:HyperlinkLabel Grid.Row="4" x:Name="CookiesPolicy" Grid.ColumnSpan="2" Text="{Binding CookiesPolicy}" Clicked="CookiesPolicy_Clicked" />-->
                     <hpl:HyperlinkLabel Grid.Row="4" x:Name="CookiesPolicy" Grid.ColumnSpan="2" Text="{x:Static resources:Properties.Resources.CookiesPolicy}" Clicked="CookiesPolicy_Clicked" />
 
 
-
-                    <Image Grid.Row="5" BackgroundColor="White" Source="{extensions:ImageResource DestoPesto.Images.logoback.png}" HorizontalOptions="Start" VerticalOptions="CenterAndExpand" HeightRequest="30" Margin="5,5,5,5"/>
-                    <Label Grid.Row="5" BackgroundColor="White" Grid.Column="1" Text="{Binding AppVersion}" TextColor="{extensions:AppMode Color=TextDefault}" VerticalTextAlignment="Center"  HorizontalTextAlignment="End" Margin="5,5,5,5"/>
+                    <!--<Image Grid.Row="5" BackgroundColor="White" Source="{extensions:ImageResource DestoPesto.Images.logoback.png}" HorizontalOptions="Start" VerticalOptions="CenterAndExpand" HeightRequest="30" Margin="5,5,5,5"/>
+                    <Label Grid.Row="5" BackgroundColor="White" Grid.Column="1" Text="{Binding AppVersion}" TextColor="{extensions:AppMode Color=TextDefault}" VerticalTextAlignment="Center"  HorizontalTextAlignment="End" Margin="5,5,5,5"/>-->
                 </Grid>
             </ContentView>
         </DataTemplate>
 
     </Shell.FlyoutFooterTemplate>
-
-
     <!--
+
+    --><!--
         The overall app visual hierarchy is defined here, along with navigation.
     
         https://docs.microsoft.com/xamarin/xamarin-forms/app-fundamentals/shell/
-    -->
+    --><!--
 
     <Shell.Resources>
         <ResourceDictionary>
@@ -83,17 +86,17 @@
             </Style>
             <Style TargetType="TabBar" BasedOn="{StaticResource BaseStyle}" />
             <Style TargetType="FlyoutItem" BasedOn="{StaticResource BaseStyle}" />
-            <!--
+            --><!--
             -->
             <!--
             Default Styles for all Flyout Items
             https://docs.microsoft.com/xamarin/xamarin-forms/app-fundamentals/shell/flyout#flyoutitem-and-menuitem-style-classes
-            -->
+            --><!--
 
             <Style Class="FlyoutItemLabelStyle" TargetType="Label">
                 <Setter Property="TextColor" Value="#0D6EFD"></Setter>
             </Style>
-            <!--      <Style Class="FlyoutItemLayoutStyle" TargetType="Layout" ApplyToDerivedTypes="True">
+            --><!--      <Style Class="FlyoutItemLayoutStyle" TargetType="Layout" ApplyToDerivedTypes="True">
                 <Setter Property="VisualStateManager.VisualStateGroups">
                     <VisualStateGroupList>
                         <VisualStateGroup x:Name="CommonStates">
@@ -130,21 +133,31 @@
                         </VisualStateGroup>
                     </VisualStateGroupList>
                 </Setter>
-            </Style>-->
+            </Style>--><!--
         </ResourceDictionary>
     </Shell.Resources>
 
-    <!-- 
+    --><!-- 
         When the Flyout is visible this defines the content to display in the flyout.
         FlyoutDisplayOptions="AsMultipleItems" will create a separate flyout item for each child element    
         https://docs.microsoft.com/dotnet/api/xamarin.forms.shellgroupitem.flyoutdisplayoptions?view=xamarin-forms
     -->
+    
 
 
+
+    <!--<FlyoutItem Title="{x:Static resources:Properties.Resources.Home}"  Icon="{extensions:ImageResource DestoPesto.Images.pin_drop.png}">
+        <ShellContent Route="AboutPage" ContentTemplate="{DataTemplate local:AboutPage}"/>
+    </FlyoutItem>-->
 
     <FlyoutItem Title="{x:Static resources:Properties.Resources.Home}"  Icon="{extensions:ImageResource DestoPesto.Images.pin_drop.png}">
-        <ShellContent Route="AboutPage" ContentTemplate="{DataTemplate local:AboutPage}"/>
+        <ShellContent Route="MainPage" ContentTemplate="{DataTemplate local:MainPage}"/>
     </FlyoutItem>
+
+    <FlyoutItem IsVisible ="False"  Title="{x:Static resources:Properties.Resources.Home}"  Icon="{extensions:ImageResource DestoPesto.Images.pin_drop.png}">
+        <ShellContent Route="LoginPage" ContentTemplate="{DataTemplate local:LoginPage}"/>
+    </FlyoutItem>
+    
     <FlyoutItem Title="{x:Static resources:Properties.Resources.SettingItemText}" Icon="{extensions:ImageResource DestoPesto.Images.settings.png}">
         <ShellContent Route="ItemsPage" ContentTemplate="{DataTemplate local:ItemsPage}" />
     </FlyoutItem>
@@ -156,7 +169,7 @@
     <MenuItem x:Name="UserProfile" Text="{x:Static resources:Properties.Resources.UserProfile}" IconImageSource="{extensions:ImageResource DestoPesto.Images.user_blue.png}" StyleClass="MenuItemLayoutStyle" Clicked="UserProfile_Clicked"></MenuItem>
 
     
-    <!-- When the Flyout is visible this will be a menu item you can tie a click behavior to  -->
+     <!--When the Flyout is visible this will be a menu item you can tie a click behavior to-->  
     <MenuItem Text="{x:Static resources:Properties.Resources.DeleteAccountText}" IconImageSource="{extensions:ImageResource DestoPesto.Images.delete_user.png}" StyleClass="MenuItemLayoutStyle" Clicked="MenuItem_Clicked"></MenuItem>
 
     <MenuItem Text="{x:Static resources:Properties.Resources.LogoutItemText}" IconImageSource="{extensions:ImageResource DestoPesto.Images.logout.png}" StyleClass="MenuItemLayoutStyle" Clicked="OnMenuItemClicked"></MenuItem>
